--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,7 +1,12 @@
-/* html,
-body {
+* {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     scroll-behavior: smooth;
 }
@@ -11,9 +16,7 @@ a {
     text-decoration: none;
 }
 
-* {
-    box-sizing: border-box;
-}
+
 
 h1,
 h2,
@@ -26,4 +29,4 @@ h6 {
 
 p {
     margin-top: 0;
-} */
+}
