--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,22 +1,20 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    scroll-behavior: smooth;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  scroll-behavior: smooth;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
-
-
 
 h1,
 h2,
@@ -24,9 +22,13 @@ h3,
 h4,
 h5,
 h6 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 p {
-    margin-top: 0;
+  margin-top: 0;
 }
+.bi{
+    display: block !important;
+    /* font-size: 1.5rem !important; */
+  }
