--- a/src/app/styles/Home.css
+++ b/src/app/styles/Home.css
@@ -1,59 +1,3 @@
-/* Global Styles */
-
- /* .container-new {
-    width: 100%;
-    overflow-x: hidden;
-  } 
-  
-  .navbar {
-    z-index: 1000;
-    padding: 0;
-  }
-  
-  .navbar-container {
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-  }
-  
-
-@media (max-width: 991.98px) {
-  .navbar-container {
-    width: 100%;
-    margin: 0;
-    border-radius: 0;
-  }
-
-  .navbar {
-    padding: 0;
-  }
-
-  .col-12 {
-    padding: 0;
-  }
-
-  .row {
-    margin: 0;
-  }
-
-  .container-fluid {
-    padding: 0;
-  }
-}
-
-  .logoLink {
-    display: inline-block;
-  }
-  
-  .logo {
-    height: 40px;
-    width: auto;
-    object-fit: contain;
-    
-  }
-  
-
-  */
-
   .navbar{
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -76,7 +20,7 @@
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     border-bottom-left-radius:25px;
-    padding: 12px 35px;
+    padding: 5px 35px;
     font-weight: 600;
     transition: all 0.3s ease;
   }
@@ -180,7 +124,7 @@
   
   .bestSelf-content {
     border-radius: 10px;
-    background: linear-gradient(to bottom right, #f0f0ff, #f5f5ff);
+    background: linear-gradient(to bottom right, #f8f8fa, #ebebff);
     box-shadow: 0 4px 15px rgba(94, 92, 230, 0.05);
     height: 50%;
   }
@@ -199,12 +143,13 @@
   .sectionText {
     font-size: 1rem;
     line-height: 1.6;
-    color: #555;
+    color: #242323;
+    margin-right: 7em;
   }
   
   .image-gallery {
     display: flex;
-    gap: 20px;
+    gap: 10px;
     margin-left: -4em;
     margin-top: 2em;
 
@@ -219,12 +164,12 @@
     flex: 2;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
   }
   
   .gallery-top,
   .gallery-bottom {
-    height: calc(50% - 10px);
+    height: calc(50% - 0px);
     overflow: hidden;
     border-radius: 8px;
   }
@@ -252,7 +197,10 @@
       padding-right: 0;
      
     }
-  
+    .sectionText {
+      font-size: 0.9rem;
+      margin-right: 0;
+    }
     .image-gallery {
       height: auto;
       flex-direction: column;
@@ -276,6 +224,10 @@
   @media (max-width: 767.98px) {
     .sectionTitle {
       font-size: 2rem;
+    }
+    .sectionText {
+      font-size: 0.9rem;
+      margin-right: 0;
     }
   
     .gallery-secondary {
