--- a/src/app/Modals/EmailModal.module.css
+++ b/src/app/Modals/EmailModal.module.css
@@ -65,7 +65,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     color: white;
     position: relative;
     overflow: hidden;
