--- a/src/app/styles/Home.css
+++ b/src/app/styles/Home.css
@@ -110,10 +110,10 @@
   }
   
   .brainIcon {
-    position: absolute;
+    /* position: absolute; */
     /* right: -30;
     top: -40; */
-    z-index: 2;
+    /* z-index: 2; */
 
   }
 
@@ -564,7 +564,10 @@
   
   @media (max-width: 767.98px) {
     .heroTitle {
-      font-size: 2.3rem;
+      font-size: 1rem;
+    }
+    .brainIcon{
+      display: none;
     }
    
     .brainIconSmall{
@@ -640,6 +643,10 @@
   @media (max-width: 576px) {
     .heroTitle {
       font-size: 2rem;
+    }
+
+    .brainIcon{
+      display: none;
     }
   
     .heroSubtitle {
