--- a/src/app/Modals/EmailModal.module.css
+++ b/src/app/Modals/EmailModal.module.css
@@ -58,15 +58,15 @@
   }
   
   .iconCircle {
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background: linear-gradient(135deg, #6366f1, #8b5cf6);
     display: flex;
     align-items: center;
     justify-content: center;
     /* margin: 0 auto; */
-    color: white;
+    /* color: white; */
     position: relative;
     overflow: hidden;
   }
